syntax = "proto3";

package envoy.admin.v2alpha;

// [#protodoc-title: Metrics]

// Proto representation of an Envoy Counter or Gauge value.
message SimpleMetric {
  enum Type {
    COUNTER = 0;
    GAUGE = 1;
  }

  // Type of metric represented.
  Type type = 1;

  // Current metric value.
  uint64 value = 2;
}
